--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=api
+# Configura\u00E7\u00E3o do banco SQLite
+spring.datasource.url=jdbc:sqlite:investimentos.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=admin
+spring.datasource.password=1234
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+
+# Scripts opcionais
+spring.sql.init.mode=always
+
+# Seguran\u00E7a b\u00E1sica (Spring Boot)
+spring.security.user.name=admin
+spring.security.user.password=1234  
