--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:sqlite:file:testdb?mode=memory&cache=shared
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=com.github.gwenn.hibernate.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.continue-on-error=true
